@@ -1,2 +1,25 @@
-# Vedika
-### Vedika: Where Code Meets Consciousness
+# Vedika - Bridging Code and Consciousness
+
+Welcome to Vedika, an evolving passion-driven compiler project. Drawing its name from the ancient Indian scriptures known as the "Vedas". Vedika embodies the essence of simplicity and clarity, akin to the profound teachings of the past.
+
+## About Vedika
+
+Vedika's syntax shares a resemblance with Python, but it empowers programmers with an array of capabilities. While in its developmental phase, Vedika is designed to blend low-level functionality with an accessible high-level syntax. Unlike traditional assembly languages, Vedika aims to deliver the power of assembly coding within a more intuitive framework.
+
+## Project Evolution
+
+You can track the journey of Vedika's development through the [Changelog file](Changelog), where I meticulously document each step and enhancement. The project code is thoughtfully commented, and I've structured different compiler passes across distinct Git branches for better organization.
+
+## Exploring Vedika
+
+For those curious about Vedika's grammar, I've compiled it in the [Grammar File](Grammar). This serves as a reference point to understand the language structure and design.
+
+## Embarking on a Compiler Journey
+
+While I may not be a seasoned compiler expert, my journey with Vedika has been guided by Aho's "Dragon Book" and insightful articles from the online community. It's worth noting that learning compiler development goes beyond theory. Creating your own compiler involves hitting the keys, experimenting, and crafting something truly unique all by yourself.
+
+## Contributions and Collaboration
+
+If you share an interest in contributing to Vedika's growth, your involvement is most welcome! Whether you'd like to collaborate directly or seek guidance on understanding the code or the compiler creation process, feel free to reach out via email at [mohitdeoli004@gmail.com](mailto:mohitdeoli004@gmail.com).
+
+Let's embark on this enlightening journey together and see where Vedika takes us!
