@@ -1,4 +1,1 @@
-alloc_glob int d
-mov 5, d
-alloc_glob int q
-mov 6, q
+	
